// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex/Pagination Default smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <p>
      Current Page: 1
    </p>
    <div class="flex w-full flex-col justify-center items-center">
      <ul class="m-auto mb-4 inline-flex items-center space-x-4 rtl:space-x-reverse">
        <li>
          <button data-v-e3f15263
                  type="button"
                  class="btn text-xs sm:text-sm transition-all bg-gray-100 cursor-not-allowed shadow-none normal-case border-solid opacity-50 cursor-not-allowed"
                  disabled
          >
            <span data-v-e3f15263
                  class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
            >
            </span>
            <span data-v-e3f15263
                  class
            >
              Prev
            </span>
          </button>
        </li>
        <li>
          1 / 5
        </li>
        <li>
          <button data-v-e3f15263
                  type="button"
                  class="btn text-xs sm:text-sm transition-all shadow-none normal-case border-solid"
          >
            <span data-v-e3f15263
                  class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
            >
            </span>
            <span data-v-e3f15263
                  class
            >
              Next
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`complex/Pagination LastPage smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <p>
      Current Page: 9
    </p>
    <div class="flex w-full flex-col justify-center items-center">
      <ul class="m-auto mb-4 inline-flex items-center space-x-4 rtl:space-x-reverse">
        <li>
          <button data-v-e3f15263
                  type="button"
                  class="btn text-xs sm:text-sm transition-all shadow-none normal-case border-solid"
          >
            <span data-v-e3f15263
                  class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
            >
            </span>
            <span data-v-e3f15263
                  class
            >
              Prev
            </span>
          </button>
        </li>
        <li>
          9 / 1
        </li>
        <li>
          <button data-v-e3f15263
                  type="button"
                  class="btn text-xs sm:text-sm transition-all bg-gray-100 cursor-not-allowed shadow-none normal-case border-solid opacity-50 cursor-not-allowed"
                  disabled
          >
            <span data-v-e3f15263
                  class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
            >
            </span>
            <span data-v-e3f15263
                  class
            >
              Next
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`complex/Pagination SinglePage smoke-test 1`] = `
<div class="main-section antialiased relative font-nunito text-sm font-normal vertical full ltr">
  <div>
    <p>
      Current Page: 1
    </p>
    <div class="flex w-full flex-col justify-center items-center">
      <ul class="m-auto mb-4 inline-flex items-center space-x-4 rtl:space-x-reverse">
        <li>
          <button data-v-e3f15263
                  type="button"
                  class="btn text-xs sm:text-sm transition-all bg-gray-100 cursor-not-allowed shadow-none normal-case border-solid opacity-50 cursor-not-allowed"
                  disabled
          >
            <span data-v-e3f15263
                  class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
            >
            </span>
            <span data-v-e3f15263
                  class
            >
              Prev
            </span>
          </button>
        </li>
        <li>
          1 / 1
        </li>
        <li>
          <button data-v-e3f15263
                  type="button"
                  class="btn text-xs sm:text-sm transition-all bg-gray-100 cursor-not-allowed shadow-none normal-case border-solid opacity-50 cursor-not-allowed"
                  disabled
          >
            <span data-v-e3f15263
                  class="transition-all overflow-hidden align-middle shrink-0 flex items-center justify-center w-0"
            >
            </span>
            <span data-v-e3f15263
                  class
            >
              Next
            </span>
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
